--- a/website/public/index.html
+++ b/website/public/index.html
@@ -25,6 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Ubuntu&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/7e0625e32e.js" crossorigin="anonymous"></script>
+<link
+href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
+rel="stylesheet"
+/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
